crates/toml_edit/tests/snapshots/invalid/ext/table/append-with-dotted-keys-8.stderr
TOML parse error at line 4, column 4
  |
4 | [_.s]
  |    ^
duplicate key
